tests/transpiler/x/zig/list_nested_assign.error
run: exit status 1
/workspace/mochi/tests/transpiler/x/zig/list_nested_assign.zig:5:33: error: array literal requires address-of operator (&) to coerce to slice type '[]i64'
    var matrix = [_][]i64{[_]i64{1, 2}, [_]i64{3, 4}};
                          ~~~~~~^~~~~~
referenced by:
    callMain [inlined]: /workspace/mochi/zig-x86_64-linux-0.15.0-dev.1160+e43617e68/lib/std/start.zig:668:22
    callMainWithArgs [inlined]: /workspace/mochi/zig-x86_64-linux-0.15.0-dev.1160+e43617e68/lib/std/start.zig:637:20
    posixCallMainAndExit: /workspace/mochi/zig-x86_64-linux-0.15.0-dev.1160+e43617e68/lib/std/start.zig:592:36
    2 reference(s) hidden; use '-freference-trace=5' to see all references
