tests/transpiler/x/zig/list_nested_assign.zig
// Generated by Mochi Zig transpiler on 2025-07-21 11:40 +0000
const std = @import("std");

pub fn main() void {
    var matrix = [_][]i64{[_]i64{1, 2}, [_]i64{3, 4}};
    matrix.get(0).?.put(0, 5) catch unreachable;
    try std.io.getStdOut().writer().print("{c}\n", .{matrix[1][0]});
}
